2002-10-22  Bill Bumgarner  <bbum@codefab.com>
	* Updated the MANIFEST (too bad we can't effectively use MANIFEST.in)
	* Slight correction/addition to setup.py

	* Added basic unit tests to objc.
	* Implemented __ne__ in terms of isEqual_ (not isNotEqual_).
	* Added unit test that tests that an object is equal to itself.

2002-10-18  Bill Bumgarner  <bbum@codefab.com>
	* Fixed the -dealloc method in OC_PythonDictionary.
	* Disabled gc in objc's __init__.py (I thought we had done this in
	the past, but it seems to have gotten lost) only for python
	2.2.x.
	* Replaced all occurrences of True and False to 1 and 0 in
	Ronald's previous changes.
	* Changed TableModel2 example to be like TableModel example

2002-10-18 Ronald Oussoren <oussoren@cistron.nl>
	* Better fix for crash while converting exception from Python to
	  Objective-C
	* Code cleanup in OC_*.[hm], ObjCPointer.m
	* Cleaner code to check if the Objective-C class has a changed 
	  method table.
	* Native selectors now have a 'defining_class' attribute, which 
	  contains a reference to the class that defined this method.
	* Added type objc.informal_protocol, which can be used to eliminate
	  most existing cases of explicit calls to 'objc.selector'
	* Adding methods like __getitem__ to Objective-C class proxies is
	  now done using python code. This should make it easier to change
	  the implementation (and: less C code ==> good)

2002-10-17  Bill Bumgarner  <bbum@codefab.com>
	* Fixed a situation where ObjCErr_ToObjC() would crash if the
	exception lacked a value or traceback.

	* propertyListFromPythonCollection() takes an optional kv argument
	that is used as a helper function when the type to be converted in
	the python collection is not recognized.   For example, the
	xmlrpclib returns a [somewhat inadequate] internal type known as a
	DateTime.  To convert this to a Foundation class requires some
	jumping through hoops that may change a bit during context.  The